samples/_failures_safe/1761361648_c364e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9fe2447b.c: In function ‘main’:
./samples/SAFE/__tmp_9fe2447b.c:157:13: error: expected ‘:’ or ‘...’ at end of input
  157 |             case 2
      |             ^~~~
./samples/SAFE/__tmp_9fe2447b.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9fe2447b.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9fe2447b.c:157:13: error: expected declaration or statement at end of input
